# superx

./: .gitignore  AGENTS.md  README.md  pyproject.toml  superx.py
docs/: grok-bridge-plan.md
skills/superx/: SKILL.md
skills/superx/evals/: trigger_cases.json
skills/superx/examples/: smoke.md
skills/superx/scripts/: check_superx_skill.py  superx.py
tests/: test_superx_research.py
